--- a/setup.cfg
+++ b/setup.cfg
@@ -19,21 +19,11 @@ classifiers =
 
 
 [options]
-zip_safe = False
-include_package_data = True
-package_dir=
-    =src
-packages=find:
-python_requires = <=3.8
+packages = find:
+python_requires = <3.9
 install_requires =
     pandas
     numpy
     scipy
     matplotlib
     importlib-metadata
-
-[options.packages.find]  # (always `find` even if `find_namespace:` was used before)
-# This section is optional as well as each of the following options:
-where=src  # . by default
-include=flip*  # * by default
-exclude=flip.tests*  # empty by default
