--- a/setup.cfg
+++ b/setup.cfg
@@ -6,16 +6,6 @@ email = corentin.ravoux.research@gmail.com
 author = Corentin Ravoux
 long_description = file : README.md
 license = MIT
-classifiers =
-    # Trove classifiers
-    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
-    License :: OSI Approved :: MIT License
-    Programming Language :: Python
-    Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.6
-    Programming Language :: Python :: 3.7
-    Programming Language :: Python :: Implementation :: CPython
-    Programming Language :: Python :: Implementation :: PyPy
 
 
 [options]
@@ -26,3 +16,18 @@ install_requires =
     scipy
     matplotlib
     importlib-metadata
+    cosmoprimo @ git+https://github.com/cosmodesi/cosmoprimo
+
+
+[options.extras_require]
+docs =
+    markdown
+    sphinx >= 5.2.3
+    sphinx-markdown-tables >= 0.0.15
+    numpydoc
+    furo
+    myst-parser
+    sphinx-copybutton
+    sphinx-design
+    sphinx-inline-tabs
+    sphinx-tabs
