--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,15 +1,16 @@
-version: 2
+# Set the OS, Python version and other tools you might need
+
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.9"
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
    configuration: docs/conf.py
 
-build:
-  os: "ubuntu-22.04"
-
 # Optionally set the version of Python and requirements required to build your docs
 python:
-   version: "3.9"
    install:
-   - method: pip
-     path: .[docs]
+    - method: pip
+    - path: .[docs]
