--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -12,5 +12,5 @@ sphinx:
 # Optionally set the version of Python and requirements required to build your docs
 python:
    install:
-    - method: pip
-    - path: .[docs]
+      path: .[docs]
+      method: pip
