--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,5 +11,8 @@ sphinx:
 
 # Optionally set the version of Python and requirements required to build your docs
 python:
-   install:
-       path: .[docs]
+  install:
+    - method: pip
+      path: .
+      extra_requirements:
+        - docs
