--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,8 @@ install_requires =
     scipy
     matplotlib
     importlib-metadata
+    emcee
+    iminuit
     cosmoprimo @ git+https://github.com/cosmodesi/cosmoprimo
 
 
