API major update

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,6 +11,8 @@ sphinx:
 
 # Optionally set the version of Python and requirements required to build your docs
 python:
-   install:
+  install:
     - method: pip
-    - path: .[docs]
+      path: .
+      extra_requirements:
+        - docs
