--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,7 @@ install_requires =
     emcee
     iminuit
     cosmoprimo @ git+https://github.com/cosmodesi/cosmoprimo
-
+    astropy
 
 [options.extras_require]
 docs =
