--- a/setup.cfg
+++ b/setup.cfg
@@ -34,3 +34,7 @@ docs =
     sphinx-inline-tabs
     sphinx-tabs
     sphinx-autoapi
+
+
+[options.package_data]
+flip = data/*.txt, data/*.parquet, data/*.mplstyle
