--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ license = MIT
 packages = find:
 install_requires =
     pandas
-    numpy
+    numpy <= 1.26.4
     scipy
     matplotlib
     importlib-metadata
