--- a/setup.cfg
+++ b/setup.cfg
@@ -27,7 +27,7 @@ docs =
     sphinx >= 5.2.3
     sphinx-markdown-tables >= 0.0.15
     numpydoc
-    furo
+    sphinx_book_theme
     myst-parser
     sphinx-copybutton
     sphinx-design
