--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,7 @@ install_requires =
     iminuit
     cosmoprimo @ git+https://github.com/cosmodesi/cosmoprimo
     astropy
+    mpmath
 
 [options.extras_require]
 docs =
