--- a/setup.cfg
+++ b/setup.cfg
@@ -13,7 +13,7 @@ packages = find:
 install_requires =
     pandas
     numpy <= 1.26.4
-    scipy
+    scipy >= 1.12
     matplotlib
     importlib-metadata
     emcee
