--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ license = MIT
 packages = find:
 install_requires =
     pandas
-    numpy <= 1.26.4
+    numpy
     scipy >= 1.12
     matplotlib
     importlib-metadata
