Fix URL for PyPI project in workflow

--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -11,10 +11,11 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: pypi
-      url: https://pypi.org/p/flipcosmo
+      url: https://pypi.org/project/flipcosmo
     permissions:
       id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
-      
+      contents: read    # recommended
+
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python
