--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -1,20 +1,18 @@
-name: Publish flip to PyPI and TestPyPI
-
+name: Publish flip to PyPI
 on: 
   push:
     tags:
       - '*'           # Push events to every tag not containing /
-
 jobs:
   build-n-publish:
-    name: Build and publish flip to PyPI and TestPyPI
+    name: Build and publish flip to PyPI
     runs-on: ubuntu-latest
     environment:
       name: pypi
       url: https://pypi.org/project/flipcosmo
     permissions:
-      id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
-      contents: read    # recommended
+      id-token: write 
+      contents: read  
 
     steps:
     - uses: actions/checkout@v4
@@ -29,11 +27,6 @@ jobs:
     - name: Build a binary wheel and a source tarball
       run: |
         python3 -m build --sdist --wheel --outdir dist/ .
-    - name: Publish distribution to Test PyPI
-      uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        repository_url: https://test.pypi.org/legacy/
-        attestations: false
     - name: Publish distribution to PyPI
       if: startsWith(github.ref, 'refs/tags')
       uses: pypa/gh-action-pypi-publish@release/v1
