Rename project from 'flip' to 'flipcosmo'

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = flip
+name = flipcosmo
 description = Field Level Inference Package
 url = https://github.com/corentinravoux/flip
 email = corentin.ravoux.research@gmail.com
