small improvement on packaging

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "flipcosmo"
+name = "flip"
 dynamic = ["version"]
 authors = [
     {name = "Corentin Ravoux", email = "corentin.ravoux.research@gmail.com"},
@@ -21,13 +21,9 @@ dependencies = [
     "importlib-metadata",
     "emcee",
     "iminuit",
-    "cosmoprimo @ git+https://github.com/cosmodesi/cosmoprimo",
     "astropy",
     "mpmath"
 ]
-
-[project.urls]
-Homepage = "https://github.com/corentinravoux/flip"
 
 [project.optional-dependencies]
 docs = [
@@ -45,7 +41,7 @@ docs = [
 ]
 
 [tool.setuptools]
-package-dir = { "" = "flip" }
+package-dir = { "" = "." }
 
 [tool.setuptools.packages.find]
 where = ["flip"]
@@ -58,15 +54,3 @@ flip = [
     "data/*.parquet",
     "data/*.mplstyle"
     ]
-
-[project.scripts]
-# Continuum fitting
-"flip_compute_correlation_model.py" = "flip.bin.flip_compute_correlation_model:main"
-"flip_compute_power_spectra.py" = "flip.bin.flip_compute_power_spectra:main"
-"flip_fisher_forecast_velocity.py" = "flip.bin.flip_fisher_forecast_velocity:main"
-"flip_launch_minuit_density_fit.py" = "flip.bin.flip_launch_minuit_density_fit:main"
-"flip_launch_minuit_full_fit.py" = "flip.bin.flip_launch_minuit_full_fit:main"
-"flip_launch_minuit_velocity_fit_full.py" = "flip.bin.flip_launch_minuit_velocity_fit_full:main"
-"flip_launch_minuit_velocity_fit_interpolation.py" = "flip.bin.flip_launch_minuit_velocity_fit_interpolation:main"
-"flip_launch_minuit_velocity_fit.py" = "flip.bin.flip_launch_minuit_velocity_fit:main"
-"flip_rcrk24_fisher.py" = "flip.bin.flip_rcrk24_fisher:main"
