recreate all the test

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ where = ["."]
 [tool.setuptools.package-data]
 flip = [
     "data/*.txt",
+    "data/*.json",
     "data/*.parquet",
     "data/*.mplstyle"
     ]
