--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install pytest fastparquet
+        python -m pip install pytest fastparquet sympy
         python -m pip install git+https://github.com/cosmodesi/cosmoprimo
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Test with pytest
