--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 1.1.4
+current_version = 1.2.0
 commit = True
 
-[bumpversion:file:flip/_version.py]
+[bumpversion:file:flip/__init__.py]
