--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -23,24 +23,26 @@ jobs:
     
     - name: Set up Python
       uses: actions/setup-python@v5
-      
+      with:
+        python-version: '3.x'
+
     - name: Install bump2version
       run:  pip install bump2version
             
     - name: increase patch
-      if: ${{ always() && (!contains(github.event.head_commit.message, '[bump major]')) && (!contains(github.event.head_commit.message, '[bump minor]')) && (!contains(github.event.head_commit.message, '[no bump]')) }}
+      if: ${{(!contains(github.event.head_commit.message, '[bump major]')) && (!contains(github.event.head_commit.message, '[bump minor]')) && (!contains(github.event.head_commit.message, '[no bump]')) }}
       run: bump2version patch --verbose
       
     - name: Bump major version
-      if: ${{ always() && contains(github.event.head_commit.message, '[bump major]') }}
+      if: ${{ ontains(github.event.head_commit.message, '[bump major]') }}
       run: bump2version major --verbose --tag
       
     - name: Bump minor version
-      if: ${{ always() && contains(github.event.head_commit.message, '[bump minor]') }}
+      if: ${{contains(github.event.head_commit.message, '[bump minor]') }}
       run: bump2version minor --verbose --tag
       
     - name: No version bump
-      if: ${{ always() && contains(github.event.head_commit.message, '[no bump]') }}
+      if: ${{contains(github.event.head_commit.message, '[no bump]') }}
       run: echo "No version bump requested"
       
     - name: Push changes
