--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools >= 77.0.3"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "flip"
+name = "flipcosmo"
 dynamic = ["version"]
 authors = [
     {name = "Corentin Ravoux", email = "corentin.ravoux.research@gmail.com"},
